refactor(trading): split ai trading tools from execution adapter